--- a/web/egov-wordpress-portal/Dockerfile
+++ b/web/egov-wordpress-portal/Dockerfile
@@ -6,5 +6,5 @@ ADD  wp-content ${DATA_DIR}/wp-content
 
 COPY docker-entrypoint.sh /usr/local/bin/
 
-ENTRYPOINT ["docker-entrypoint.sh"]
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD ["apache2-foreground"]
