Refactoring docker build

--- a/web/egov-wordpress-portal/Dockerfile
+++ b/web/egov-wordpress-portal/Dockerfile
@@ -1,13 +1,7 @@
 FROM egovio/wordpress:4.9.1-php7.2-apache
 
-ENV DATA_DIR=/opt/eGov/egov-wordpress-portal
-RUN mkdir -p ${DATA_DIR}
-ADD  wp-content ${DATA_DIR}/wp-content
+ENV DATA_DIR=/usr/src/wordpress
 
-COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN rm -rf ${DATA_DIR}/wp-content
 
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
-
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
-
-CMD ["apache2-foreground"]
+ADD wp-content ${DATA_DIR}/wp-content
